# sportvision

./: .gitignore  LICENSE  README.md  pyproject.toml  sportvision_colab.ipynb  test_e2e.py
.github/workflows/: ci.yml
docs/plans/: 2026-02-26-sportvision-core.md
examples/: demo.py
src/sportvision/: __init__.py  annotators.py  detection.py  homography.py  pipeline.py  teams.py  tracking.py
src/sportvision/analytics/: __init__.py  distance.py  heatmap.py  possession.py  speed.py
src/sportvision/workflows/: __init__.py  _compat.py  blocks.py  kinds.py
src/sportvision/workflows/distance_calculator/: v1.py
src/sportvision/workflows/possession_tracker/: v1.py
src/sportvision/workflows/sports_detection_filter/: v1.py
src/sportvision/workflows/team_classifier/: v1.py
tests/: conftest.py  test_analytics_heatmap.py  test_analytics_possession.py  test_analytics_speed.py  test_annotators.py  test_detection.py  test_homography.py  test_pipeline.py  test_teams.py  test_tracking.py  test_workflow_integration.py  test_workflows.py
