[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sportvision"
version = "0.1.0"
description = "Real-time sports analytics toolkit built on the Roboflow ecosystem"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "supervision>=0.25",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
inference = ["inference>=0.30", "rf-detr>=1.0"]
dev = ["pytest>=7.0", "ruff>=0.4", "pytest-cov"]
all = ["sportvision[inference,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/sportvision"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
