[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sportvision"
version = "0.2.2"
description = "Real-time sports analytics toolkit built on the Roboflow ecosystem"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Mohib Shaikh" }]
keywords = ["sports", "analytics", "computer-vision", "roboflow", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "supervision>=0.25",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/MohibShaikh/sportvision"
Repository = "https://github.com/MohibShaikh/sportvision"
Issues = "https://github.com/MohibShaikh/sportvision/issues"

[project.optional-dependencies]
inference = ["inference>=0.30", "rfdetr>=1.0"]
workflows = ["inference>=0.30"]
dev = ["pytest>=7.0", "ruff>=0.4", "pytest-cov"]
all = ["sportvision[inference,workflows,dev]"]

[project.entry-points."roboflow.workflows"]
sportvision = "sportvision.workflows"

[tool.hatch.build.targets.wheel]
packages = ["src/sportvision"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
